# wizentoken

./: README.md
WizentokenGameWebsite/: sitemap.md
WizentokenGameWebsite/backend/: index.js  leaderboard.js  package-lock.json  package.json  signaling-server.js  stats.js
WizentokenGameWebsite/frontend/: package-lock.json  package.json  postcss.config.mjs  tsconfig.json
WizentokenGameWebsite/frontend/app/: layout.tsx  page.tsx  provider.tsx
WizentokenGameWebsite/frontend/app/access/: page.tsx
WizentokenGameWebsite/frontend/app/admin/: page.tsx
WizentokenGameWebsite/frontend/app/components/: BidPanel.tsx  Card.tsx  Hand.tsx  ModeCard.tsx  Navbar.tsx  PlayerAvatar.tsx  StakePanel.tsx  TrickPile.tsx
WizentokenGameWebsite/frontend/app/create-game/: page.tsx
WizentokenGameWebsite/frontend/app/dummy/: page.tsx
WizentokenGameWebsite/frontend/app/gameplay/: page.tsx
WizentokenGameWebsite/frontend/app/hooks/: useGame.ts
WizentokenGameWebsite/frontend/app/how-to-play/: page.tsx
WizentokenGameWebsite/frontend/app/join-game/: page.tsx
WizentokenGameWebsite/frontend/app/leaderboard/: page.tsx
WizentokenGameWebsite/frontend/app/lib/: gamelogic.ts
smart-contracts/airdrop/: Anchor.toml
smart-contracts/airdrop/programs/airdrop/: Cargo.toml
smart-contracts/airdrop/programs/airdrop/src/: accounts.rs  lib.rs  rewards.rs
smart-contracts/airdrop/tests/: accounts.test.ts  airdrop.ts  lib.test.ts  rewards.test.ts
wizentokenWebsite/frontend/: package-lock.json  package.json  postcss.config.mjs
wizentokenWebsite/frontend/app/: layout.tsx  page.tsx
(+21 files in other folders)
